--- a/visionboard/style.css
+++ b/visionboard/style.css
@@ -53,7 +53,7 @@ button:hover {
     position: relative;
     width: 90%;
     flex-grow: 1;
-    background: url('slike/pluto.png');
+    background: url('pluto.png');
     background-size: cover;
     border-radius: 12px;
     box-shadow: inset 0 4px 15px rgba(0,0,0,0.3);
